--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^14.2.1",
     "@vueuse/sound": "^2.1.3",
     "vue": "^3.5.27"
   },
